--- a/index.html
+++ b/index.html
@@ -51,9 +51,10 @@
       </div>
       </div>
     <div class="bottom">
-    <pre><a href="https://www.instagram.com/__ciaraaaes___/">Instagram</a>      <a href="https://www.facebook.com/ciara.stafford.9/">facebook</a>     <a href="https://www.linkedin.com/in/ciara-stafford-7b6405229/">LinkedIn</a>
-
-
+    <pre>
+    
+    
+    <a href="https://www.instagram.com/__ciaraaaes___/">Instagram</a>      <a href="https://www.facebook.com/ciara.stafford.9/">facebook</a>     <a href="https://www.linkedin.com/in/ciara-stafford-7b6405229/">LinkedIn</a>
 
     </pre>
       <p class="footer">Created by Ciara Stafford</p>
