--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </div>
       </div>
     <div class="bottom">
-    <pre>
+    <pre>&nbsp;
     
     
     <a href="https://www.instagram.com/__ciaraaaes___/">Instagram</a>      <a href="https://www.facebook.com/ciara.stafford.9/">facebook</a>     <a href="https://www.linkedin.com/in/ciara-stafford-7b6405229/">LinkedIn</a>
